add permgen size for java opts